Bug 173159 - Konqueror does not warn about unsubmitted changes
Summary: Konqueror does not warn about unsubmitted changes
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-19 20:09 UTC by Albert Astals Cid
Modified: 2008-10-19 21:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2008-10-19 20:09:13 UTC
Version:            (using Devel)
Installed from:    Compiled sources

How to reproduce:
 * Go to www.google.com
 * Type something in the search line
 * Close the window

On KDE 3 you got a warning about unsubmitted changes, in KDE 4 you do not.
Comment 1 Maksim Orlovich 2008-10-19 20:48:15 UTC
SVN commit 873587 by orlovich:

DocumentImpl::unsubmittedChanges actually relied on modified things having 'M' at the end of their state 
serialization, which broke notification of changes when the N/null flag got added. Fix this by adding 
an appropriate abstraction.

BUG:173159 


 M  +3 -0      html/html_formimpl.h  
 M  +4 -2      xml/dom_docimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=873587
Comment 2 Harri Porten 2008-10-19 20:53:07 UTC
SVN commit 873589 by porten:

Merged revision 873587:
DocumentImpl::unsubmittedChanges actually relied on modified things having 'M' at the end of their state 
serialization, which broke notification of changes when the N/null flag got added. Fix this by adding 
an appropriate abstraction.

BUG:173159 

 M  +3 -0      html/html_formimpl.h  
 M  +4 -2      xml/dom_docimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=873589
Comment 3 Germain Garand 2008-10-19 21:40:19 UTC
was my fault, sorry ;(