DocumentImpl::unsubmittedChanges actually relied on modified things having 'M' at the end of their state serialization, which broke notification of changes when the N/null flag got added. Fix this by adding an appropriate abstraction.

BUG:173159 

svn path=/branches/KDE/4.1/kdelibs/; revision=873587